--- a/selecoes.html
+++ b/selecoes.html
@@ -246,7 +246,7 @@
                         <br> 
                     </div><!--player-table-A-->
                 </div><!--grupo a end-->
-                <hr>
+                <hr id="hr-pages">
                 <br>
 
                 <div><!--grupo b-->
@@ -454,7 +454,7 @@
                         <br> 
                     </div><!--player-table-B-->
                 </div><!--grupo b end-->
-                <hr>
+                <hr id="hr-pages">
                 <br>
 
                 <div><!--grupo c-->
