--- a/estadios.html
+++ b/estadios.html
@@ -37,8 +37,8 @@
             </div>
         </div><!--menu-->
     </header>
-    
-    <main class="main-pg-default">
+    <main>
+    <div class="main-pg-default">
         <div class="center">
             <div>
                 <br>
@@ -478,7 +478,8 @@
             </div><!--div center-inicial-->
         </div><!--center-->
         <br><br><br>
-    </main>
+    </div>
+</main>
     <footer>
         <div class="footer">
             <img id="senac-logo-footer" src="./img/senac-logo-white.png">
