--- a/estadios.html
+++ b/estadios.html
@@ -54,7 +54,7 @@
                     <p>Mesmo reformado, porém, o estádio tem uma arquitetura um pouco menos arrojada, mais puxada para o tradicional. Diferente dos outros palcos da Copa, o Khalifa não tem teto, nem mesmo retrátil, mas conta com sistema de refrigeração para ajudar a amenizar as altas temperaturas, prezando o conforto dos 50 mil torcedores que cabem no estádio.</p>
                 </div>
                 <br>
-                <table id="grupos" border="1">
+                <table id="table-estadio" class="table-estadio" border="1">
                     <tr><th colspan="3">Estádio Khalifa </th></tr>
                     <tr>
                         <th>Jogos</th>
@@ -127,7 +127,7 @@
                     <p>Localizado na cidade homônima, foi um projeto apresentando em dezembro de 2018 pelo falecido arquiteto Albert Speer. A arquitetura do estádio, que tem fachada inspirada nas tigelas de tâmaras da época de ouro do artesanato islâmico, e iluminação feita para lembrar o fanar, uma lanterna local, conta com uma cobertura de painéis de energia solar (que vão alimentar o estádio e seus arredores) e acabamentos em prata, que impactaram muito no alto custo da construção, que ficou no valor de 2 bilhões de dólares.</p>
                     <p>O estádio, de grama natural e teto retrátil - que pode ser aberto ou fechado a depender do clima e das demandas dos eventos -, tem capacidade para 94.500 torcedores. Nas paredes estão fotos de 80 mil pessoas que participaram das obras e um mosaico, além de uma tecnologia que vai turbinar a experiência dos visitantes, que poderão tirar fotos com hologramas dos jogadores e fazer compras nos shoppings virtuais.</p>
                 </div>                        
-                <table id="grupos" border="1">
+                <table id="table-estadio" class="table-estadio" border="1">
                     <tr><th colspan="3">Estádio Lusail </th></tr>
                     <tr>
                         <th>Jogos</th>
@@ -204,7 +204,7 @@
                     <p>Um dos estádios que mais representa a tradicionalidade qatari é o Al Bayt, localizado na cidade de Jor. Com capacidade para 60 mil torcedores, foi projetado pelo arquiteto alemão Albert Speer Jr., que se inspirou nas tendas beduínas - uma cabana usada por nômades árabes para para se estabelecer e sobreviver ao deserto -, para desenhar a fachada da arena.</p>
                     <p>Mas, apesar da aparência simples de uma tenda, o estádio, assim como os outro sete que vão receber jogos da Copa, é extremamente tecnológico. Além disso, possui um hotel em suas instalações, no qual os quartos tem vista direta para o campo, que é feito de grama natural.</p>
                 </div>
-                <table id="grupos" border="1">
+                <table id="table-estadio" class="table-estadio" border="1">
                     <tr><th colspan="3">Estádio Al Bayt </th></tr>
                     <tr>
                         <th>Jogos</th>
@@ -279,7 +279,7 @@
                     <p>Situado em Doha, capital do Qatar, é um dos estádios mais modernos da atualidade. Este é o único dos oito palcos da Copa do Mundo que foi projetado por um arquiteto local, Ibrahim M. Jaidah, que se inspirou no gahfiya, um tradicional gorro de malha usado por homens qataris, para o design exterior da arena.</p>
                     <p>Durante a Copa do Mundo, o Al Thumama terá capacidade para 40 mil pessoas, mas isso cairá na metade após o Mundial, de forma a atender melhor às necessidades e funcionar como uma infraestrutura esportiva de qualidade para os locais. Ao final da competição, o estádio será também um centro comunitário, que contará com multiplas instalações desportivas.</p>
 
-                    <table id="grupos" border="1">
+                    <table id="table-estadio" class="table-estadio" border="1">
                         <tr><th colspan="3">Estádio Al Thumama </th></tr>
                         <tr>
                             <th>Jogos</th>
@@ -352,7 +352,7 @@
                     <p>De todos os oito estádios do Mundial, este é o que tem o sistema de refrigeração menos complexo. Por ser à beira-mar, a própria brisa natural alivia o calor.</p>            
                     <p>O 974 foi inaugurado em novembro de 2021 e será totalmente desmontado após o Mundial. A preocupação do governo local é não deixar os chamados “elefantes-brancos” como herança da Copa do Mundo. A promessa é que partes do estádio sejam reutilizados em parques populares e cedidos a outros países.</p>
                 
-                    <table id="grupos" border="1">
+                    <table id="table-estadio" class="table-estadio" border="1">
                         <tr><th colspan="3">Estádio 974 </th></tr>
                         <tr>
                             <th>Jogos</th>
@@ -420,7 +420,7 @@
                     <p>Também seguindo a ideia de funcionalidade e vivência de outros estádios que vão receber a Copa, o Al Janoub, sem sair dos arredores da arena, os torcedores poderão passear à beira-mar, fazer compras e visitar um museu com a história da região, e ainda estão sendo desenvolvidas outras experiências e praticidade, como escola, salão de casamento, pistas de ciclismo, equitação e corrida, além de restaurantes, mercados, ginásios e parques. A ideia é que seja um local que preza pelo bem-estar e socialização, usando esporte e entretenimento como ferramenta para isso.</p>
                     <p>Ao todo, o Al Janoub vai receber sete jogos da Copa do Mundo, sendo que seis deles são da fase de gru'pos', e o outro é nas oitavas de final, primeira etapa de mata-mata do Mundial. A seleção brasileira não vai chegar a jogar neste estádio em nenhum momento da competição.</p>
                
-                    <table id="grupos" border="1">
+                    <table id="table-estadio" class="table-estadio" border="1">
                         <tr><th colspan="3">Estádio Al Janoub </th></tr>
                         <tr>
                             <th>Jogos</th>
