--- a/selecoes.html
+++ b/selecoes.html
@@ -42,7 +42,7 @@
     <main>
         <div class="main-pg-default">
             <div><!--main content-->    
-                <h1 class="h1-sel">FASE DE GRUPOS CATAR 2022</h1>
+                <h1 class="h1-sel">SELEÇÕES PARTICIPANTES</h1>
                 <br>
                 <hr class="text-div">
                 <br>
