--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </header>
 
     <main>
-        <div alt="Logo FWC Qatar 2022" class="div-index"></div>
+        <div alt="Logo FWC Qatar 2022" >
+            <img src="./img/img-index.png" class="img-index">
+        </div>
         <aside>
             <div class="center">
                 <div class="center-inicial">
