--- a/estadios.html
+++ b/estadios.html
@@ -392,7 +392,7 @@
                 <h2>Estádio do Porto de Doha (Estádio 974)</h2>
                 <br>
 
-                <img class="estadios-img" alt="imagem do Estádio do Porto de Doha" src="Img/974.jpg">
+                <img class="estadios-img" alt="imagem do Estádio do Porto de Doha" src="img/974.jpg">
                 <p>
                     Localizado em Ras Abu Aboud, distrito a 7 km do centro de Doha, o estádio fica às
                     margens do Golfo e faz uma homenagem ao comércio marítimo do Catar. O estádio foi
